<resources>
    <string name="app_name">TestAssignment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="trade_by_bata"><font weght='700'>Trade by <font color='#4E55D7'>bata</font></font></string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash sale</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="comment">Comment</string>
    <string name="discount_value">%d%% off</string>
    <string name="password">password</string>
    <string name="color">Color:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="reviews_amount">(%1d reviews)</string>
    <string name="price_value">$ %1$.2f</string>

    <string name="error_empty_first_name">First name is empty!</string>
    <string name="error_empty_email">Email is empty!</string>
    <string name="error_invalid_email">Email is invalid!</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_user_already_exists">User with name \"%1s\" already exists.</string>
    <string name="error_user_not_found">User with name \"%1s\" not found. </string>
</resources>