<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_menu_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_menu_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/navigation_comment"
        android:icon="@drawable/ic_menu_comment"
        android:title="@string/comment" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/profile" />

</menu>