<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_left"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_profile"
        style="@style/TextHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/avatar_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="19dp"
        >

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:src="@drawable/photo_sample"
            />

        <TextView
            android:id="@+id/tv_have_account"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/change_photo"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:text="Satria Adhi Pradana"
        app:layout_constraintTop_toBottomOf="@id/avatar_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_upload"
        style="@style/BlueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        android:text="@string/upload_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="45dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.valkotova.testassignment.ui.views.MenuItem
                android:id="@+id/menu_trade_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/trade_store"
                app:icon="@drawable/ic_credit_card"
                />

            <com.valkotova.testassignment.ui.views.MenuItem
                android:id="@+id/menu_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/payment_method"
                app:icon="@drawable/ic_credit_card"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.valkotova.testassignment.ui.views.MenuItem
                    android:id="@+id/menu_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:text="@string/balance"
                    app:icon="@drawable/ic_credit_card"
                    app:has_right_arrow="false"
                    android:layout_weight="1.0"
                    />
                <TextView
                    android:id="@+id/tv_balance_amount"
                    style="@style/MenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="$ 1593"
                     />
            </LinearLayout>
            <com.valkotova.testassignment.ui.views.MenuItem
                android:id="@+id/menu_trade_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/trade_history"
                app:icon="@drawable/ic_credit_card"
                />
            <com.valkotova.testassignment.ui.views.MenuItem
                android:id="@+id/menu_restore_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/restore_purchase"
                app:icon="@drawable/ic_restore"
                />
            <com.valkotova.testassignment.ui.views.MenuItem
                android:id="@+id/menu_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/help"
                app:icon="@drawable/ic_help"
                app:has_right_arrow="false"
                />
            <com.valkotova.testassignment.ui.views.MenuItem
                android:id="@+id/menu_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/log_out"
                app:icon="@drawable/ic_log_out"
                app:has_right_arrow="false"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>